--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: python
 python:
   - "3.6-dev"  # 3.6 development branch
 
+before_install:
+  - sudo rm -f /etc/boto.cfg
+
 install:
   - pip3 install -e .
 
 script:
-  - echo "Done"
+  - python run_test.py
