--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: python
 python:
+  - "3.5-dev"  # 3.6 development branch
   - "3.6-dev"  # 3.6 development branch
+  - "3.7-dev"  # 3.6 development branch
+
+env:
+  - UBUNTU_VER=16.04
+  - UBUNTU_VER=18.04
+  - UBUNTU_VER=18.10
 
 before_install:
   - sudo rm -f /etc/boto.cfg
